# Give-me-CPP

./: .vimrc  2.1_notes.txt  README.md  args  args.cpp  aritmetic.txt  array_weight.txt  assembly_intro.txt  awk.sh  cmake.txt  color  color.cpp  game_engine.txt  idea.txt  if  key.tex  lambda.cpp  more_examples.tex  new_awk.sh  notes.txt  project_creator.sh  sayhello.cpp  shmup_boilerplate.cpp  variables.txt  vextract.sh
codacedemy/: .compile_execute.txt.swp  compile_execute.txt
code/: hello.cpp
examples/: .clang-tidy_file.cpp  .cpp  .ins.cpp  .insert.cpp  .siz.cpp  .size.cpp  4_paramete.cpp  \sub.cpp  \subsubsec.cpp  \subsubsection{overcomplicated_constexpr.cpp  \subsubsection{useful_constexpr.cpp  \subsubsection{what_is_the_type_of_val?.cpp  a_be.cpp  a_bet.cpp  a_co.cpp  a_col.cpp  a_lam.cpp  a_lambda_to_initialize_a_const_object.cpp  access_and_research.cpp  acci.cpp  accid.cpp  accidental.cpp  accidental_conversions.cpp  accidental_slicing.cpp  accum.cpp  activate_sanitizers_in_root_cmakelists.txt.cpp  adding_compiler_warnings.cpp  addr.cpp  addre.cpp  address_op.cpp  addressop.cpp  addressoperator.cpp  algor.cpp  algorithms.cpp  all_c.cpp  all_combined_algorithms,_text_formatting,_concepts,_etc..cpp  all_together.cpp  allo.cpp  allocate.cpp  allocation.cpp  (+687 more)
filesystem/: filesystem.txt
functions/: functions_ex.cpp
game/: shmup_boilerplate.cpp
keyword_feature/: a.out  keywords.cpp
keywords/: key.tex  keywords  keywords.cpp
machine_code/: introduction.txt
workbook/3_cmake/variables/: CMakeLists.txt
workbook/3_cmake/variables/app/: main.cpp
(+88 files in other folders)
